--- a/public/index.html
+++ b/public/index.html
@@ -1127,6 +1127,6 @@
       </script>
     </footer>
   </div>
-  <script type="module" src="assets/js/gate1_breath_wall.js"></script>
+  <script type="module" src=""C:\MSMD_MASTER\02_DEV\WEB\public\assets\js\gate1_breath_wall.js""></script>
 </body>
 </html>
